# rdf4j-python

./: .gitignore  .readthedocs.yaml  CLI_README.md  README.md  main.py  pyproject.toml
.github/workflow/: python.yaml
.github/workflows/: ci.yaml  python.yaml  release.yaml
docs/: api.rst  conf.py  index.md  index.rst
docs/_template/: custom-module-template.rst
docs/source/: modules.rst  rdf4j_python.model.rst  rdf4j_python.rst  rdf4j_python.utils.rst
examples/: README.md  cli_demo.py  complete_workflow.py  create_repository.py  delete_repository.py  list_repositories.py  query.py  query_and_print.py  repo.py  upload_file.py
rdf4j-python/client/: client.py
rdf4j-python/driver/: async_rdf4j_store.py  async_repository.py
rdf4j_python/: __init__.py  cli.py
rdf4j_python/_client/: _client.py
rdf4j_python/_driver/: __init__.py  _async_named_graph.py  _async_rdf4j_db.py  _async_repository.py  _async_transaction.py
rdf4j_python/cli/: __init__.py  __main__.py
rdf4j_python/exception/: __init__.py  repo_exception.py
rdf4j_python/expcetion/: repo_expcetion.py
rdf4j_python/model/: __init__.py  _dataset.py  _namespace.py  _repository_config.py  _repository_info.py  _term.py  repository.py  repository_config.py  term.py
tests/: conftest.py  docker-compose.yml  test_async_named_graph.py  test_cli.py  test_client.py  test_client_initialization.py  test_fine_grained_queries.py  test_query_builder.py  test_query_type_detection.py  test_rdf4j_repo.py  test_rdf4j_repository.py  test_repository.py  test_sparql_queries.py  test_transactions.py  test_upload_file.py
(+25 files in other folders)
