[project]
name = "rdf4j-python"
authors = [{ name = "Chengxu Bian", email = "cbian564@gmail.com" }]
version = "0.2.0"
description = "The Python client for RDF4J"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28.1", "pyoxigraph>=0.4.10"]

[project.optional-dependencies]
sparqlwrapper = ["sparqlwrapper>=2.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-docker>=3.2.1",
    "ruff>=0.11.8",
    "ty>=0.0.1a7",
]
docs = ["furo>=2024.8.6", "sphinx>=8"]

[tool]
rye = { dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
] }

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): bump version to {version}"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
